java/java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testTryWrapper9-hints.pass
Add throws clause for java.io.IOException
Surround with try-catch
